--- a/sharinpix/src/package.xml
+++ b/sharinpix/src/package.xml
@@ -1,8 +1,24 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
     <types>
-        <members>*</members>
+        <members>Client</members>
+        <members>MultiRequestMock</members>
+        <members>SingleRequestMock</members>
+        <members>ClientTest</members>
+        <members>SharinPixException</members>
+        <members>Token</members>
+        <members>JWT</members>
+        <members>SharinPixSettingController</members>
+        <members>SharinPixSettingControllerTEST</members>
         <name>ApexClass</name>
+    </types>
+    <types>
+        <members>Credential__c</members>
+        <name>CustomObject</name>
+    </types>
+    <types>
+        <members>*</members>
+        <name>StaticResource</name>
     </types>
     <version>31.0</version>
 </Package>
