Add custom labels to package.

--- a/sharinpix/src/package.xml
+++ b/sharinpix/src/package.xml
@@ -17,6 +17,10 @@
         <name>CustomObject</name>
     </types>
     <types>
+        <members>CustomLabels</members>
+        <name>CustomLabels</name>
+    </types>
+    <types>
         <members>*</members>
         <name>StaticResource</name>
     </types>
