--- a/sharinpix/src/package.xml
+++ b/sharinpix/src/package.xml
@@ -13,6 +13,12 @@
         <name>ApexClass</name>
     </types>
     <types>
+        <members>ApiCloudinary</members>
+        <members>ApiSharinPix</members>
+        <members>ResourceCloudinary</members>
+        <name>RemoteSiteSetting</name>
+    </types>
+    <types>
         <members>Credential__c</members>
         <name>CustomObject</name>
     </types>
@@ -21,7 +27,10 @@
         <name>CustomLabels</name>
     </types>
     <types>
-        <members>*</members>
+        <members>SharinPixIcon16x16</members>
+        <members>Logo</members>
+        <members>AlbumsLogo</members>
+        <members>ActionSharinPixAlbum</members>
         <name>StaticResource</name>
     </types>
     <version>31.0</version>
