--- a/sharinpix/src/package.xml
+++ b/sharinpix/src/package.xml
@@ -2,48 +2,61 @@
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
     <types>
         <members>Client</members>
-        <members>MultiRequestMock</members>
-        <members>SingleRequestMock</members>
         <members>ClientTest</members>
-        <members>SharinPixException</members>
-        <members>Token</members>
         <members>JWT</members>
+        <members>MultiRequestMock</members>
+        <members>SharinPixException</members>
+        <members>SharinPixSampleController</members>
+        <members>SharinPixSampleControllerTest</members>
         <members>SharinPixSettingController</members>
         <members>SharinPixSettingControllerTEST</members>
+        <members>SingleRequestMock</members>
+        <members>Token</members>
+        <members>SharinPixLightningController</members>
+        <members>SharinPixLightningControllerTEST</members>
         <name>ApexClass</name>
+    </types>
+    <types>
+        <members>SharinPixInstallationInstructions</members>
+        <members>SharinPixSampleCase</members>
+        <members>SharinPixSampleContact</members>
+        <members>SharinPixSetting</members>
+        <name>ApexPage</name>
+    </types>
+    <types>
+        <members>Loading</members>
+        <members>SharinPix</members>
+        <members>Event</members>
+        <name>AuraDefinitionBundle</name>
     </types>
     <types>
         <members>Albums</members>
         <name>ConnectedApp</name>
     </types>
     <types>
-        <members>SharinPixSetting</members>
-        <name>ApexPage</name>
-    </types>
-    <types>
-        <members>ApiCloudinary</members>
-        <members>ApiSharinPix</members>
-        <members>ResourceCloudinary</members>
-        <name>RemoteSiteSetting</name>
+        <members>CustomLabels</members>
+        <name>CustomLabels</name>
     </types>
     <types>
         <members>Credential__c</members>
         <name>CustomObject</name>
     </types>
     <types>
-        <members>CustomLabels</members>
-        <name>CustomLabels</name>
-    </types>
-    <types>
         <members>SharinPix_setting</members>
         <name>CustomTab</name>
     </types>
     <types>
-        <members>SharinPixIcon16x16</members>
-        <members>Logo</members>
-        <members>AlbumsLogo</members>
+        <members>ApiSharinPix</members>
+        <members>ApiSharinPixImageRessources</members>
+        <members>ApiSharinPixImagesTLS</members>
+        <name>RemoteSiteSetting</name>
+    </types>
+    <types>
         <members>ActionSharinPixAlbum</members>
+        <members>AlbumsLogo</members>
+        <members>Logo</members>
+        <members>SharinPixIcon16x16</members>
         <name>StaticResource</name>
     </types>
-    <version>31.0</version>
+    <version>34.0</version>
 </Package>
