--- a/sharinpix/src/package.xml
+++ b/sharinpix/src/package.xml
@@ -25,6 +25,10 @@
         <name>ApexClass</name>
     </types>
     <types>
+        <members>TagAction</members>
+        <name>ApexComponent</name>
+    </types>
+    <types>
         <members>SharinPixInstallationInstructions</members>
         <members>SharinPixSampleCase</members>
         <members>SharinPixSampleContact</members>
