--- a/sharinpix/src/package.xml
+++ b/sharinpix/src/package.xml
@@ -9,6 +9,7 @@
         <members>Image</members>
         <members>JWT</members>
         <members>MultiRequestMock</members>
+        <members>SObjectWrapper</members>
         <members>SharinPixException</members>
         <members>SharinPixLightningController</members>
         <members>SharinPixLightningControllerTEST</members>
@@ -21,8 +22,15 @@
         <members>TagActionController</members>
         <members>TagActionController_TEST</members>
         <members>TagImage</members>
+        <members>TagImageTEST</members>
         <members>Token</members>
+        <members>Utils</members>
+        <members>UtilsTest</members>
         <name>ApexClass</name>
+    </types>
+    <types>
+        <members>*</members>
+        <name>ApexComponent</name>
     </types>
     <types>
         <members>SharinPixInstallationInstructions</members>
@@ -38,20 +46,8 @@
         <name>AuraDefinitionBundle</name>
     </types>
     <types>
-        <members>Albums</members>
-        <name>ConnectedApp</name>
-    </types>
-    <types>
-        <members>CustomLabels</members>
-        <name>CustomLabels</name>
-    </types>
-    <types>
         <members>Credential__c</members>
         <name>CustomObject</name>
-    </types>
-    <types>
-        <members>SharinPix_setting</members>
-        <name>CustomTab</name>
     </types>
     <types>
         <members>ApiSharinPix</members>
@@ -66,5 +62,5 @@
         <members>SharinPixIcon16x16</members>
         <name>StaticResource</name>
     </types>
-    <version>34.0</version>
+    <version>38.0</version>
 </Package>
