--- a/sharinpix/src/package.xml
+++ b/sharinpix/src/package.xml
@@ -52,7 +52,7 @@
     </types>
     <types>
         <members>Credential__c</members>
-        <members>Token__c</members>
+        <members>SharinPixPermission__c</members>
         <name>CustomObject</name>
     </types>
     <types>
