--- a/sharinpix/src/package.xml
+++ b/sharinpix/src/package.xml
@@ -1,74 +1,74 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
-	<types>
-		<members>Action</members>
-		<members>Client</members>
-		<members>ClientTest</members>
-		<members>Command</members>
-		<members>Crud</members>
-		<members>Image</members>
-		<members>JWT</members>
-		<members>MultiRequestMock</members>
-		<members>SObjectWrapper</members>
-		<members>SharinPixException</members>
-		<members>SharinPixLightningController</members>
-		<members>SharinPixLightningControllerTEST</members>
-		<members>SharinPixSampleController</members>
-		<members>SharinPixSampleControllerTest</members>
-		<members>SharinPixSettingController</members>
-		<members>SharinPixSettingControllerTEST</members>
-		<members>SingleRequestMock</members>
-		<members>Tag</members>
-		<members>TagActionController</members>
-		<members>TagActionController_TEST</members>
-		<members>TagImage</members>
-		<members>TagImageTEST</members>
-		<members>Token</members>
-		<members>Utils</members>
-		<members>UtilsTest</members>
-		<members>SharinPixComponentController</members>
-		<members>SharinPixComponentControllerTEST</members>
-		<members>TokenGeneratorController</members>
-		<members>TokenGeneratorController_TEST</members>
-		<members>ImageSearchController</members>
-		<name>ApexClass</name>
-	</types>
-	<types>
-		<members>SharinPix</members>
-		<members>TagAction</members>
-		<name>ApexComponent</name>
-	</types>
-	<types>
-		<members>SharinPixInstallationInstructions</members>
-		<members>SharinPixSampleCase</members>
-		<members>SharinPixSampleContact</members>
-		<members>SharinPixSetting</members>
-		<members>SharinPixTokenGenerator</members>
-		<name>ApexPage</name>
-	</types>
-	<types>
-		<members>Event</members>
-		<members>Loading</members>
-		<members>SharinPix</members>
-		<name>AuraDefinitionBundle</name>
-	</types>
-	<types>
-		<members>Credential__c</members>
-		<members>SharinPixPermission__c</members>
-		<name>CustomObject</name>
-	</types>
-	<types>
-		<members>ApiSharinPix</members>
-		<members>ApiSharinPixImageRessources</members>
-		<members>ApiSharinPixImagesTLS</members>
-		<name>RemoteSiteSetting</name>
-	</types>
-	<types>
-		<members>ActionSharinPixAlbum</members>
-		<members>AlbumsLogo</members>
-		<members>Logo</members>
-		<members>SharinPixIcon16x16</members>
-		<name>StaticResource</name>
-	</types>
-	<version>38.0</version>
+    <types>
+        <members>Action</members>
+        <members>Client</members>
+        <members>ClientTest</members>
+        <members>Command</members>
+        <members>Crud</members>
+        <members>Image</members>
+        <members>ImageSearchController</members>
+        <members>JWT</members>
+        <members>MultiRequestMock</members>
+        <members>SObjectWrapper</members>
+        <members>SharinPixComponentController</members>
+        <members>SharinPixComponentControllerTEST</members>
+        <members>SharinPixException</members>
+        <members>SharinPixLightningController</members>
+        <members>SharinPixLightningControllerTEST</members>
+        <members>SharinPixPermissionController</members>
+        <members>SharinPixPermissionController_TEST</members>
+        <members>SharinPixSampleController</members>
+        <members>SharinPixSampleControllerTest</members>
+        <members>SharinPixSettingController</members>
+        <members>SharinPixSettingControllerTEST</members>
+        <members>SingleRequestMock</members>
+        <members>Tag</members>
+        <members>TagActionController</members>
+        <members>TagActionController_TEST</members>
+        <members>TagImage</members>
+        <members>TagImageTEST</members>
+        <members>Token</members>
+        <members>Utils</members>
+        <members>UtilsTest</members>
+        <name>ApexClass</name>
+    </types>
+    <types>
+        <members>SharinPix</members>
+        <members>TagAction</members>
+        <name>ApexComponent</name>
+    </types>
+    <types>
+        <members>SharinPixInstallationInstructions</members>
+        <members>SharinPixPermission</members>
+        <members>SharinPixSampleCase</members>
+        <members>SharinPixSampleContact</members>
+        <members>SharinPixSetting</members>
+        <name>ApexPage</name>
+    </types>
+    <types>
+        <members>Event</members>
+        <members>Loading</members>
+        <members>SharinPix</members>
+        <name>AuraDefinitionBundle</name>
+    </types>
+    <types>
+        <members>Credential__c</members>
+        <members>SharinPixPermission__c</members>
+        <name>CustomObject</name>
+    </types>
+    <types>
+        <members>ApiSharinPix</members>
+        <members>ApiSharinPixImageRessources</members>
+        <members>ApiSharinPixImagesTLS</members>
+        <name>RemoteSiteSetting</name>
+    </types>
+    <types>
+        <members>ActionSharinPixAlbum</members>
+        <members>AlbumsLogo</members>
+        <members>Logo</members>
+        <members>SharinPixIcon16x16</members>
+        <name>StaticResource</name>
+    </types>
+    <version>38.0</version>
 </Package>
