update api version

--- a/demo-auto-tag/src/package.xml
+++ b/demo-auto-tag/src/package.xml
@@ -6,7 +6,8 @@
     </types>
     <types>
         <members>SharinPixDemoAutoTag</members>
+        <members>SharinPixDemoAutoTagWOController</members>
         <name>ApexPage</name>
     </types>
-    <version>38.0</version>
+    <version>39.0</version>
 </Package>
